# async-shutdown

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: channels.rs  lib.rs
