[package]
name = "async-shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
tokio = { version = "1.20.1", features = ["sync", "signal"] }
tracing = "0.1.35"

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
tokio-test = "0.4.2"
